--- a/src/main/resources/application-production-heroku.properties
+++ b/src/main/resources/application-production-heroku.properties
@@ -26,3 +26,5 @@ product.service.url = ${PRODUCT_SERVICE_URL}
 transaction.service.url = ${TRANSACTION_SERVICE_URL}
 
 retrofit.timeout = 30
+
+spring.main.allow-circular-references = true
